# zc_buffer_rust

./: Cargo.toml  README.md
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml  entrypoint.sh
benches/: zc_buffer_benchmark.rs
src/: agent.rs  defaults.rs  error.rs  handle.rs  lib.rs  main.rs  manager.rs  types.rs
src/manager/: actor.rs  allocators.rs  components.rs  finalize.rs  handlers.rs  helpers.rs  operations.rs  state.rs
src/manager/components/: components_builder.rs  finalization_handler.rs  group_data_processor.rs  group_lifecycle.rs  reservation_allocators.rs  spawn_info_provider.rs
src/manager/operations/: group_processing.rs  request_handlers.rs
tests/: integration_tests.rs
