[package]
name = "zc_buffer"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.45.0" , features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
thiserror = "2.0.12"
bytes = "1.10.1"
futures = "0.3.31"

[lib]
name = "zc_buffer"
path = "src/lib.rs"

[[bin]]
name = "buffer_demo"
path = "src/main.rs"

[dev-dependencies]
criterion = { version = "0.5.1", features = ["async_tokio"] } # 根据您使用的tokio版本和criterion最新版调整
tokio = { version = "1", features = ["full"] } # 确保tokio在dev-dependencies中也可用，并且有rt-multi-thread等特性
futures = "0.3" # criterion异步场景可能需要

[[bench]]
name = "zc_buffer_benchmark" # 基准测试的名称
harness = false             # 我们将使用 criterion 的 harness